# sk-engines

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.cmake  README.md  TODO.md  alt_qspi.lds  alt_qspi_chuck.lds  app.cpp  pyproject.toml
csound-poc/: Makefile  app.cpp  app.h  harness.cpp  spotykach_qspi_vtor.cpp
docs/: architecture.md  engine-ideas.md  engine-layout.md  item2-interface-lift-plan.md  item3-plan.md  item3b-plan.md  lofi-int16-scope.md  lofi-path-b-scope.md  manual.md  phase5-plan.md  preparing-audio.md  refactor-status.md  refactor-top5.md  review-260529.md  source-guide.md
docs/dev/: chuck-impl.md  chuck-midi-in-porting.md  chuck-midi.md  chuck-pod-poc.md  cmake-gap.md  csound-impl.md  csound.md  delay-impl.md  edrums-impl.md  engine-gen.md  gigaverb-impl.md  glitch-impl.md  graincloud-impl.md  granular-impl.md  indicator-comparison.md  indicator-grammar.md  item2-interface-lift-plan.md  item3-plan.md  item3b-plan.md  lofi-int16-scope.md  lofi-path-b-scope.md  mosc-impl.md  phase5-plan.md  pstretch-impl.md  qdelay-impl.md  radio-impl.md  refactor-status.md  refactor-top5.md  reso-impl.md  reverb-impl.md  review-260529.md  shuttle-impl.md  softcut-impl.md  softcut-spike.md  tape-impl.md
docs/diagrams/: chorus-controls.d2  controls-template.d2  csound-controls.d2  delay-controls.d2  dfilter-controls.d2  edrums-controls.d2  engines-architecture.d2  filter-controls.d2  gigaverb-controls.d2  glitch-controls.d2  graincloud-controls.d2  mosc-controls.d2  pstretch-controls.d2  qdelay-controls.d2  radio-controls.d2  reso-controls.d2  reverb-controls.d2  shuttle-controls.d2  softcut-controls.d2  tape-controls.d2  voice-controls.d2
docs/diagrams/controls/: chorus.json  csound.json  delay.json  dfilter.json  edrums.json  filter.json  gigaverb.json  glitch.json  graincloud.json  mosc.json  pstretch.json  qdelay.json  radio.json  reso.json  reverb.json  shuttle.json  softcut.json  tape.json  voice.json
docs/engine-types/: README.md  cpp.md  faust.md  gen.md
docs/engines/: README.md  chorus.md  chuck.md  csound.md  delay.md  dfilter.md  edrums.md  filter.md  gigaverb.md  glitch.md  graincloud.md  granular.md  karp.md  mosc.md  passthrough.md  pstretch.md  qdelay.md  radio.md  reso.md  reverb.md  shuttle.md  softcut.md  tape.md  voice.md
docs/media/: controls-template.d2  engines-architecture.d2
examples/: 0-working.csd
examples/chuck/: 0.ck  1.ck  2.ck  3.ck  4.ck  5.ck  6.ck  7.ck  README.md  midi_in.ck
examples/csound/: 0.csd  1.csd  2.csd  3.csd  4.csd  5.csd  6.csd  README.md
host/: Makefile  bench_graincloud.cpp  bench_reverb.cpp  host_setup.h  main_host.cpp  test_chorus.cpp  test_chuck_patch.cpp  test_csound_alloc.cpp  test_csound_midi.cpp  test_csound_patch.cpp  test_csound_reload.cpp  test_delay.cpp  test_dfilter.cpp  test_diffuser.cpp  test_edrums_slots.cpp  test_engine_params.cpp  test_filter.cpp  test_glitch.cpp  test_graincloud.cpp  test_graincloud_kernel.cpp  test_karp.cpp  test_pstretch.cpp  test_qdelay.cpp  test_radio.cpp  test_reso.cpp  test_reverb.cpp  test_reverb_giga.cpp  test_shuttle.cpp  test_softcut.cpp  test_stream.cpp  test_tape.cpp  test_voice.cpp  wav.h
host/shim/: daisy.h
pod/: Makefile  Makefile.chuck  README.md  daisy_qspi.cfg  harness.cpp  harness_chuck.cpp
scripts/: build_release.py  build_release.sh  convert_radio_audio.py  convert_tape_audio.py  engine_gen_common.py  fetch_chuck.sh  fetch_csound.sh  gen_controls_diagram.py  gen_engine.py  gen_faust_engine.py  test_build_release.py  test_convert_tape_audio.py
scripts/patches/: midi_daisy.patch
src/: app.cpp  app.h  common.h  config.h  expose.h  meter.h  version.cpp  version.h
src/core/: buffer.cpp  core.cpp  core.h  deck.h  driver.cpp  driver.h  engine_context.h  follower.cpp  fx.h  itimesource.h  mode.h  pcm_convert.h  pcm_loader.h  sample16.h  tempo.cpp  tempo.h
src/dsp/: adenv.cpp  adenv.h  biquad.cpp  cpattern.cpp  cpattern.h  deline.h  diffuser.h  divider.h  hann.h
src/engine/: arena.h  color.h  deck_ref.h  display_model.h  engine_context.h  engine_leds.h  engine_params.h  engine_select.h  faust_arch.h  granular_engine.cpp  granular_engine.h  iengine.h  indicators.h  istreamdeck.h  itransport.h  led.ring.h  mode.h  passthrough_engine.h
src/engine/chorus/: chorus.dsp  chorus.json  chorus_engine.h  faust_kernel_chorus.h
src/engine/chuck/: TODO.md  chuck_alloc.cpp  chuck_engine.cpp  chuck_engine.h  chuck_midi_in.h  chuck_patch.h
src/engine/csound/: csound_alloc.cpp  csound_engine.cpp  csound_engine.h  csound_midi.h  csound_patch.h  csound_pool.h  csound_reload.h  spotykach_qspi_vtor.cpp
src/engine/delay/: delay_engine.cpp  delay_engine.h
src/engine/dfilter/: dfilter.dsp  dfilter.json  dfilter_engine.h  faust_kernel_dfilter.h
src/engine/edrums/: edrums_engine.cpp  edrums_engine.h
src/engine/faust/: README.md  faust_arch.h  faust_capture.h  faust_chain.h  faust_dsp.h  faust_engine.cpp  faust_engine.h  faust_fx.h  voice.dsp
src/engine/filter/: faust_kernel_filter.h  filter.dsp  filter.json  filter_engine.h
src/engine/gen_gigaverb/: _ext_daisy.cpp  _ext_daisy.h  daisy_buffer.h  gen_buffer.h  gen_ext_common_daisy.h  gen_remap_inputs.h  gigaverb_engine.h  manifest.json
src/engine/gigaverb/: gigaverb.json  gigaverb_engine.h
src/engine/glitch/: NOTICE.md  glitch_engine.cpp  glitch_engine.h  glitch_voice.h
src/engine/graincloud/: buffer.cpp  buffer.h  click.cpp  (+23 more)
src/hw/: buffer.sdram.cpp  buffer.sdram.h  card.cpp  card.h  fat_file.cpp  fat_file.h  hardware.cpp  stream_deck.cpp  stream_deck.h
src/memory/: audio_stream.h  byte_file.h  raw_stream.h  spsc_ring.h  storage.cpp  storage.h  wav.h  wav_stream.h
src/transport/: synclock.cpp  synclock.h  transport.cpp  transport.h
src/ui/: calibrator.cpp  color.cpp  core.ui.cpp  core.ui.h  core.ui.leds.cpp  core.ui.midi.cpp  core.ui.pads.cpp  led.ring.cpp
test/: Makefile  check.h  test_config.cpp  test_divider.cpp  test_follower.cpp  test_main.cpp  test_pcmconvert.cpp  test_pcmloader.cpp  test_sample16.cpp  test_speedmap.cpp  test_synclock.cpp  test_wav.cpp
test/stubs/: daisysp.h
(+82 files in other folders)
